# line-scan-mobile-manipulator-demo

./: .gitattributes  CMakeLists.txt  README.md  TODO.md  package.xml
docs/: README.md  method-sketch.md  metrics.md  project_scope.md  public_private_boundary.md  related-repositories.md  roadmap.md  terminology.md
experiments/: README.md
launch/: README.md
media/: README.md
results/: README.md  coverage_metric_demo.csv
results/figures/: README.md
results/tables/: README.md  toy_line_scan_coverage.csv
results/videos/: README.md
scripts/: coverage_metric_demo.py
src/: README.md  toy_line_scan_coverage_demo.py
